Update for unboxing of primitives